@@ -1,3 +1,5 @@
+For 1.18.15:
+	  PixelTexture nodes - default image caused a segfault
 For 1.18.14:
 	- setting SFNodes from Javascript fixed. (was setting node to NULL)
 
